<resources>
    <string name="app_name">Тренировки дома</string>
    <string name="navigation_label_trainings">Тренировки</string>
    <string name="navigation_label_search">Поиск</string>
    <string name="navigation_label_record">Отчет</string>
    <string name="navigation_label_settings">Настройки</string>

    <string name="screen_title_trainings">Тренировки дома</string>

    <string name="home_screen_titles_programs">ПРОГРАММЫ 7х4</string>
    <string name="home_goals_number_divider">/</string>

    <string name="content_description_training_program">Изображение программы тренировок</string>
    <string name="content_description_training_level">Уровень сложности программы</string>
    <string name="content_description_edit_text">Редактировать цели</string>
    <string name="content_description_weak_goals">Цели на неделю</string>
    <string name="content_description_training_number">Количество тренировок</string>

    <string name="training_level_beginner">Новичок</string>
    <string name="training_level_advanced">Продолжающий</string>
    <string name="training_level_pro">Продвинутый</string>

    <string name="stats_calories">ккал</string>
    <string name="stats_minutes">минут</string>
    <plurals name="stats_trainings">
        <item quantity="zero">тренировок</item>
        <item quantity="one">тренировка</item>
        <item quantity="few">тренировки</item>
        <item quantity="many">тренировок</item>
    </plurals>
</resources>
