<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_super_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constrainedWidth="true"
        android:layout_margin="@dimen/default_horizontal_margin"
        android:text="@string/navigation_label_trainings"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_title"
        tools:layout="@layout/fragment_home" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_bar_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:constraint_referenced_ids="
            bottom_nav_trainings,
            bottom_nav_search,
            bottom_nav_record,
            bottom_nav_settings
        "/>

    <LinearLayout
        android:id="@+id/bottom_nav_trainings"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bottom_nav_search"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/navigation_label_trainings"
            android:src="@drawable/icon_trainings"
            app:tint="@color/inactive_navigation_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/navigation_label_trainings"
            android:textSize="11sp"
            android:textColor="@color/inactive_navigation_button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_nav_search"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/bottom_nav_trainings"
        app:layout_constraintEnd_toStartOf="@id/bottom_nav_record"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/navigation_label_search"
            android:src="@drawable/icon_search"
            app:tint="@color/inactive_navigation_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/navigation_label_search"
            android:textSize="11sp"
            android:textColor="@color/inactive_navigation_button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_nav_record"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/bottom_nav_search"
        app:layout_constraintEnd_toStartOf="@id/bottom_nav_settings"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/navigation_label_record"
            android:src="@drawable/icon_record"
            app:tint="@color/inactive_navigation_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/navigation_label_record"
            android:textSize="11sp"
            android:textColor="@color/inactive_navigation_button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_nav_settings"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/bottom_nav_record"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/navigation_label_settings"
            android:src="@drawable/icon_settings"
            app:tint="@color/inactive_navigation_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/navigation_label_settings"
            android:textSize="11sp"
            android:textColor="@color/inactive_navigation_button"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="
            bottom_nav_trainings,
            bottom_nav_search,
            bottom_nav_record,
            bottom_nav_settings
        "/>


</androidx.constraintlayout.widget.ConstraintLayout>
